All Device Responsive

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
-        <div class="hr container">
+        <div class="container">
           <hr />
         </div>
         <div class="footer-menu container">
