--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="hero-section container">
         <div class="hero-content">
           <div class="hero-content-left">
-            <h1 class="primary-header">The Greatest show on the earth</h1>
+            <h1 class="primary-header">FIFA World Cup Qatar 2022™</h1>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odio
               voluptate nulla quisquam aspernatur nobis deleniti delectus!
@@ -36,7 +36,7 @@
           <div class="hero-content-right">
             <img
               class="hero-image"
-              src="images/banner-hero-section.png"
+              src="images/cristiano-ronaldo.png"
               alt="marcelo playing football image"
             />
           </div>
