--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
           <div class="hero-content-left">
             <h1 class="primary-header">FIFA World Cup Qatar 2022™</h1>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odio
-              voluptate nulla quisquam aspernatur nobis deleniti delectus!
-              Alias, porro molestiae.
+              Qatar is ready for welcoming FIFA World Cup 2022. To Watch
+              exciting Match simultaneously keep eyes on us.
             </p>
-            <button class="btn cta-btn">
+            <button class="btn cta-btn btn-active">
               Watch Live
               <span class="btn-icon"
                 ><i class="fa-solid fa-angle-right"></i
@@ -46,18 +45,22 @@
       <section class="featured-section">
         <div class="featured-flex container">
           <div class="featured-flex-item featured-left">
-            <button class="btn">Upcoming Match</button>
-            <button class="btn">All Group</button>
-            <button class="btn">Blog</button>
+            <a href="upcoming-match.html" class="btn">Upcoming Match</a>
+            <a href="#" class="btn">All Group</a>
+            <a href="#" class="btn btn-active">Blog</a>
           </div>
           <div class="featured-flex-item featured-right">
             <div class="featured-right-grid">
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/Lionel Messi Gets Set For Paris Saint-Germain Champions League Bow.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">Messi</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Lionel Messi Gets Set For Paris Saint-Germain Champions
+                    League Bow
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -70,11 +73,15 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/New-Look Inter Milan Begin Champions League Campaign Against Real Madrid.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">Real Madrid</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    New-Look Inter Milan Begin Champions League Campaign Against
+                    Real Madrid
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -87,11 +94,14 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/Euro 2020 Top Six Strikers to Watch Out For.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">Euro 2020</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Euro 2020: Top Six Strikers to Watch Out For
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -104,11 +114,15 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/Decade When Football Turned Into A Global Beast, Broke New Ground.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">Football</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Decade When Football Turned Into A Global Beast, Broke New
+                    Ground
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -121,11 +135,15 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/FIFA World Cup 2018 Russian Women Should Not Sleep With World Cup Guests, Warns MP.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">Russia</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    FIFA World Cup 2018: Russian Women Should Not Sleep With
+                    World Cup Guests, Warns MP
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -138,11 +156,15 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/FIFA World Cup Records That May Tumble During World Cup In Russia.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">Russia</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    FIFA World Cup Records That May Tumble During World Cup In
+                    Russia
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -155,11 +177,14 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/FIFA World Cup Top 5 Youngsters To Watch Out For.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">FIFA</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    FIFA World Cup Top 5 Youngsters To Watch Out For
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -172,11 +197,14 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/Euro 2020 Top Young Players To Look Out For.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">EURO 2020</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    Euro 2020 Top Young Players To Look Out For
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
@@ -189,11 +217,14 @@
                 </div>
               </article>
               <article class="blog featured-items">
-                <img src="images/blog-content/blog-thumbnail.png" alt="" />
+                <img
+                  src="images/blog-content/FIFA World Cup First-Timers And Teams Making A Comeback.jpg"
+                  alt=""
+                />
                 <div class="featured-items-content">
-                  <button class="btn btn-transfer">Transfer</button>
+                  <button class="btn btn-transfer">EGYPT</button>
                   <h3 class="tittle">
-                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    FIFA World Cup: First-Timers And Teams Making A Comeback
                   </h3>
                   <span class="icon-box">
                     <i class="fa-regular fa-clock"></i>
