--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FIFA WORLD CUP 2022 QATAR</title>
+    <link rel="shortcut icon" href="images/world-cup.png" type="image/x-icon" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/5b5eaff0ce.js"
