--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -50,7 +50,11 @@
               >Upcoming Match</a
             >
             <a href="#" class="btn">All Group</a>
-            <a href="/index.html" class="btn">Blog</a>
+            <a
+              href="https://alamin-merndev.github.io/world-cup-project/"
+              class="btn"
+              >Blog</a
+            >
           </div>
           <div class="featured-flex-item featured-right">
             <div class="featured-right-grid">
