--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
           <div class="featured-flex-item featured-left">
             <a href="upcoming-match.html" class="btn">Upcoming Match</a>
             <a href="#" class="btn">All Group</a>
-            <a href="#" class="btn btn-active">Blog</a>
+            <a
+              href="https://alamin-merndev.github.io/world-cup-project/"
+              class="btn btn-active"
+              >Blog</a
+            >
           </div>
           <div class="featured-flex-item featured-right">
             <div class="featured-right-grid">
